# one-day-one-cuda-operator

./: .gitignore  CMakeLists.txt  README.md  setup.py
common/: cuda_utils.cuh  tester.cuh
csrc/: extension.cpp  ops.h
my_cuda_ops/: __init__.py
my_cuda_ops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
operators/01_vector_add/: CMakeLists.txt  README.md  vec_add.cu
operators/02_gemm/: README.md  gemm.cu
operators/03_reduction/: README.md  reduce.cu
operators/04_softmax/: README.md  softmax.cu
operators/05_layernorm/: README.md  layernorm.cu
operators/06_transpose/: README.md  transpose.cu
operators/07_tensor_core_gemm/: README.md  gemm_wmma.cu
operators/08_prefix_sum/: README.md  prefix_sum.cu
operators/09_conv2d/: README.md  conv2d.cu
operators/10_flash_decoding/: README.md  flash_decoding.cu
operators/11_w4a16_gemv/: README.md  qgemv.cu
scripts/: benchmark_conv2d.py  benchmark_flash_attn.py  benchmark_gemm.py  benchmark_layernorm.py  benchmark_prefix_sum.py  benchmark_quant.py  benchmark_reduce.py  benchmark_softmax.py  benchmark_transpose.py  benchmark_vecadd.py  benchmark_wmma.py  profile_prefix_sum.py
